// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Cordial's upsertContact destination action: all fields 1`] = `
Object {
  "2AUBtz6WjM5lHBm": "2AUBtz6WjM5lHBm",
  "identifyBy": Array [
    "2AUBtz6WjM5lHBm",
  ],
  "request_source": "integration-segment",
  "testType": "2AUBtz6WjM5lHBm",
}
`;

exports[`Testing snapshot for Cordial's upsertContact destination action: required fields 1`] = `
Object {
  "2AUBtz6WjM5lHBm": "2AUBtz6WjM5lHBm",
  "identifyBy": Array [
    "2AUBtz6WjM5lHBm",
  ],
  "request_source": "integration-segment",
}
`;

exports[`Testing snapshot for Cordial's upsertContact destination action: skip objects 1`] = `
Object {
  "attribute1": "string",
  "email": "user1234",
  "identifyBy": Array [
    "email",
  ],
  "request_source": "integration-segment",
}
`;
